--- a/stylemobile.css
+++ b/stylemobile.css
@@ -16,18 +16,27 @@
 
 
 
+
+
 /* Header nav */
 
-header
+
+
+
+
+
+/* SECTION1 */
+
+#section1
 {
-	justify-content: inherit;
-	align-items: inherit;
+	margin: auto;
+    width: 55%;
 }
 
-#logo, #naviguation
+
+#section1 h1
 {
-	display: flex;
-	flex-direction: column;
+	font-size: 1.2em;
 }
 
 
