--- a/stylemobile.css
+++ b/stylemobile.css
@@ -25,7 +25,6 @@ header
 	width: 100%;
 	margin: auto;
 	margin-bottom: 30px;
-	flex-wrap: wrap;
 }
 
 #naviguation
@@ -39,10 +38,11 @@ header
 	order: 2;
 }
 
-#naviguation #logo
+
+
+#logo
 {
-	display: flex;
-	flex-direction: column;
+	width: 50%;
 }
 
 
