--- a/stylemobile.css
+++ b/stylemobile.css
@@ -183,7 +183,8 @@
     margin-top: 0;
     font-size: 1.3em;
     width: 100%;
-    padding-top: 40px;
+	padding-top: 40px;
+	justify-content: space-evenly;
 }
 
 
