--- a/styletablette.css
+++ b/styletablette.css
@@ -12,7 +12,61 @@
 	margin: auto;
 }
 
-#page_complete p
+
+
+
+/* SECTION 1 */
+
+#section1
 {
-    color: red;
+    text-align: center;
+}
+
+#filtres
+{
+    justify-content: space-around;
+}
+
+#regroupe 
+{
+    width: 50%;
+    justify-content: space-evenly;
+}
+
+#bloc3
+{
+    width: 25%;
+}
+
+#bloc4
+{
+    width: 25%;
+}
+
+
+
+
+
+/* HEBERGEMENT */
+
+#section2
+{
+	float: none;
+    height: auto;
+    width: auto;
+}
+
+
+
+
+
+
+
+/* ASIDE */
+
+#aside_conteneur
+{
+	float: none;
+    width: 100%;
+    height: auto;
 }
