--- a/styletablette.css
+++ b/styletablette.css
@@ -22,28 +22,30 @@
     text-align: center;
 }
 
-#filtres
+#form
 {
-    justify-content: space-around;
+    justify-content: center;
+    margin-bottom: 25px;
+    margin-top: 15px;
 }
 
 #regroupe 
 {
     width: 50%;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
-#bloc3
+
+#regroupe2 
 {
-    width: 25%;
+    width: 50%;
+    justify-content: space-around;
 }
 
-#bloc4
+#logement
 {
-    width: 25%;
+    justify-content: center;
 }
-
-
 
 
 
@@ -69,4 +71,25 @@
 	float: none;
     width: 100%;
     height: auto;
+}
+
+
+
+
+
+
+
+/* GRID */
+
+#section3 h2
+{
+    margin-left: 15px;
+}
+
+
+
+.bloc_grid
+{
+    margin-left: 15px;
+    margin-right: 15px;
 }
