--- a/style.css
+++ b/style.css
@@ -32,46 +32,42 @@ body a
 
 header
 {
-	padding-top: 30px;
 	margin-bottom: 20px;
-}
-
-#head
-{
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
+}
+
+header #logo
+{
+	flex-grow: 1;
 }
 
 
-
-/* NAVIGUATION */
-
-#place
+header nav
 {
+	font-size: 0.85em;
 	display: flex;
 	align-items: baseline;
 }
 
 
-nav
+header nav a:hover, 
+header nav a.active
 {
-	font-size: 0.85em;
-}
-
-nav a:hover
-{
-	border-top: 2px #0065FC solid;
-	padding-top: 25px;
+	border-top: 2px  #0065FC solid;
 	color: #0065FC;
 }
 
-nav a
+header nav a
 {
+	border-top: 2px transparent solid;
 	margin-left: 40px;
+	padding: 20px 0;
 }
 
-.button
+
+
+header .button
 {
 	border: none;
 	background-color: transparent;
@@ -523,14 +519,15 @@ figure
 	height: 100%;
 }
 
+.bloc_grid a
+{
+	position: relative;
+}
 
 .items1
 {
-	grid-column-start: 1;
-  	grid-column-end: 1;
-  	grid-row-start: 1;
-	grid-row-end: 4;
-	position: relative;
+	grid-column: 1 / 1;
+  	grid-row: 1 / 4;
 	height: 330px;
 }
 
@@ -551,11 +548,9 @@ figure
 
 .items2
 {
-	grid-column-start: 2;
-  	grid-column-end: 2;
+	grid-column: 2 / 2;
   	grid-row-start: 1;
 	grid-row-end: 3;
-	position: relative;
 	height: 190px;
 }
 
@@ -565,7 +560,6 @@ figure
   	grid-column-end: 3;
   	grid-row-start: 1;
 	grid-row-end: 4;
-	position: relative;
 	height: 330px;
 }
 
@@ -575,7 +569,6 @@ figure
 	grid-column-end: 4;
 	grid-row-start: 1;
 	grid-row-end: 2;
-	position: relative;
 	height: 140px;
 }
 
@@ -585,7 +578,6 @@ figure
 	grid-column-end: 2;
 	grid-row-start: 3;
 	grid-row-end: 4;
-	position: relative;
 	height: 120px;
 }
 
@@ -594,8 +586,7 @@ figure
 	grid-column-start: 4;
 	grid-column-end: 4;
 	grid-row-start: 2;
-	grid-row-end: 4;
-	position: relative;  
+	grid-row-end: 4;  
 	height: 170px;
 }
 
