--- a/stylemobile.css
+++ b/stylemobile.css
@@ -19,10 +19,30 @@
 
 
 /* Header nav */
-
-.button
+header
 {
-	order: -2;
+	flex-wrap: wrap;
+}
+
+header #logo
+{
+	order: 0;
+	flex-basis: 50%;
+	flex-grow: 0;
+}
+
+header nav
+{
+	order: 2;
+	flex-basis: 100%;
+	flex-grow: 1;
+}
+
+header .button
+{
+	order: 1;
+	flex-basis: 50%;
+	margin-left: 0;
 }
 
 
