--- a/stylemobile.css
+++ b/stylemobile.css
@@ -53,10 +53,8 @@ header .button
 
 #section1
 {
-	margin: auto;
-    width: 55%;
+	text-align: inherit;
 }
-
 
 #section1 h1
 {
@@ -65,6 +63,11 @@ header .button
 
 
 /* Bouton formulaire */
+
+#form
+{
+	justify-content: inherit;
+}
 
 #recherche_bouton
 {
@@ -98,10 +101,16 @@ header .button
 	display: inline;
 }
 
+#regroupe {
+    width: 100%;
+    justify-content: inherit;
+}
 
 #regroupe2
 {
-	display: inherit;
+	
+	justify-content: inherit;
+	display: inline;
 }
 
 #bloc1
@@ -127,7 +136,10 @@ header .button
 	margin-bottom: 12px;
 }
 
-
+#logement p
+{
+	font-size: 1em;
+}
 
 
 
@@ -145,8 +157,17 @@ header .button
 	float: none;
 	height: auto;
 	background-color: transparent;
-	width: 435px;
+	width: max-content;
     margin: auto;
+}
+
+#section2 h2 
+{
+    margin-left: 10%;
+    margin-top: 25px;
+    font-size: 1.5em;
+	margin-bottom: 20px;
+	text-align: inherit;
 }
 
 #section2 img 
@@ -155,28 +176,22 @@ header .button
 	height: 115px;
 }
 
-#section2 p 
-{
-    margin-left: 10%;
-    margin-top: 30px;
-    font-size: 1em;
-}
-
-#section2 h2 
-{
-    margin-left: 10%;
-    margin-top: 35px;
-    font-size: 1.4em;
-    margin-bottom: 20px;
-}
 
 #section2 figure
 {
 	background-color: white;
-	width: 80%;
+	width: 85%;
 	height: 195px;
 	margin: auto;
 	margin-bottom: 15px;
+}
+
+#section2 p 
+{
+    margin-left: 10%;
+    margin-top: 30px;
+	font-size: 1.2em;
+	text-align: inherit;
 }
 
 .photo
@@ -219,7 +234,7 @@ header .button
 #aside_conteneur
 {
 	float: none;
-	width: 100%;
+	width: max-content;
 	border-radius: 0;
 	height: 580px;
 }
@@ -227,11 +242,13 @@ header .button
 
 #aside_conteneur h2
 {
-    margin-bottom: 27px;
+    margin-bottom: 25px;
     margin-top: 0;
-    font-size: 1.3em;
-    width: 100%;
-	padding-top: 40px;
+    font-size: 1.5em;
+    width: 85%;
+	padding-top: 30px;
+	justify-content: space-between;
+    margin-left: 7%;
 }
 
 
@@ -239,7 +256,7 @@ header .button
 {
     margin: auto;
     margin-bottom: 10px;
-	width: 70%;
+	width: 85%;
 	height: 145px;
 }
 
