--- a/stylemobile.css
+++ b/stylemobile.css
@@ -162,6 +162,12 @@ main .fa-search
 main #filtres
 {
 	display: inline;
+	border: transparent;
+}
+
+main .filter 
+{
+    background-color: inherit;
 }
 
 main #filtres p
@@ -236,7 +242,9 @@ main #section2
 	height: auto;
 	background-color: transparent;
 	width: 100%;
-    margin: auto;
+	margin: auto;
+	border: none;
+    border-radius: inherit;
 }
 
 main #section2 h2 
@@ -252,6 +260,12 @@ main #section2 img
 {
     width: 100%;
 	height: 115px;
+}
+
+main #section2 figcaption 
+{
+    text-align: inherit;
+    padding-left: 10px;
 }
 
 
