--- a/styletablette.css
+++ b/styletablette.css
@@ -57,6 +57,10 @@ main #regroupe
     justify-content: space-around;
 }
 
+main .photo figure
+{
+    margin-left: 0;
+}
 
 main #regroupe2 
 {
@@ -113,6 +117,7 @@ main #section2 p
     padding-bottom: 15px;
     font-size: 1em;
     text-align: center;
+    margin-left: 0;
 }
 
 main #hebergement1
