--- a/stylemobile.css
+++ b/stylemobile.css
@@ -15,14 +15,11 @@
 
 
 
-
-
-
 /* Header nav */
 header
 {
-	flex-wrap: wrap;
 	margin-top: 20px;
+	text-align: inherit;
 }
 
 header #logo
@@ -40,6 +37,7 @@ header nav
 	flex-grow: 1;
 	text-align: center;
 	font-size: 1em;
+	justify-content: inherit;
 }
 
 header nav a
@@ -47,7 +45,6 @@ header nav a
 	margin-left: 0;
 	flex-basis: 50%;
 }
-
 
 
 header .button
@@ -59,20 +56,21 @@ header .button
 	justify-content: flex-end;
 	padding-right: 20px;
 	font-size: 0.95em;
+	border-bottom: none;
+	padding-top: 0;
+	padding-bottom: 0;
 }
 
 header nav a:hover, 
 header nav a.active
 {
-	border-top: 2px transparent solid;
-	color: #0065FC;
-	border-bottom: 3px  #0065FC solid;
+	width: inherit;
 }
 
 
 header nav a.active2
 {
-	border-bottom: 3px solid #F2F2F2;
+	width: inherit;
 }
 
 
