--- a/styletablette.css
+++ b/styletablette.css
@@ -14,6 +14,53 @@
 
 
 
+/* HEADER */
+
+header 
+{
+    flex-wrap: wrap;
+    text-align: center;
+}
+
+header #logo
+{
+    flex-basis: 100%;
+}
+
+
+header nav 
+{
+    flex-basis: 66%;
+    justify-content: space-around;
+}
+
+
+header nav a:hover, header nav a.active
+{
+    border-top: 2px transparent solid;
+    color: #0065FC;
+    border-bottom: 3px #0065FC solid;
+    width: 50%;
+}
+
+header nav a.active2 
+{
+    border-bottom: 3px solid #F2F2F2;
+    width: 50%;
+}
+
+
+header .button 
+{
+    flex-basis: 30%;
+    border-bottom: 3px solid #F2F2F2;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+
+
+
 
 /* SECTION 1 */
 
